# libaperture-0

./: .editorconfig  .gitignore  .gitlab-ci.yml  meson.build  meson_options.txt
debian/: aperture-0-examples.install  aperture-0-examples.lintian-overrides  changelog  control  copyright  gbp.conf  libaperture-0-0.install  libaperture-0-0.symbols  libaperture-0-dev.install  not-installed  rules  salsa-ci.yml  watch
debian/patches/: series
debian/tests/: build-test  control
debian/upstream/: metadata
demo/: aperture-demo-window.c  aperture-demo-window.h  aperture-demo.c  demo-window.ui  demo.gresources.xml  io.gnome.Aperture.Demo.json  meson.build
doc/: aperture-docs.xml  meson.build
examples/: aperture-example-main.c  meson.build  org.gnome.libaperture.Example.json
src/: aperture-audio-profile.vala  aperture-barcode-result.c  aperture-barcode-result.h  aperture-barcode-result.vala  aperture-barcode-types.h  aperture-camera-switcher-button.vala  aperture-camera.c  aperture-camera.h  aperture-camera.vala  aperture-device-manager.c  aperture-device-manager.h  aperture-device-manager.vala  aperture-device.vala  aperture-disk-space.vala  aperture-double-buffer.vala  aperture-gallery-button.vala  aperture-gallery-page.vala  aperture-gallery.vala  aperture-gst-widget.c  aperture-gst-widget.h  aperture-gst-widget.vala  aperture-microphone.vala  aperture-private.h  aperture-shutter-button.vala  aperture-tween.vala  aperture-utils.c  aperture-utils.h  aperture-video-profile.vala  aperture-viewfinder.c  aperture-viewfinder.h  aperture-viewfinder.vala  aperture-widget.vala  aperture.c  aperture.deps  aperture.h  aperture.vala  meson.build
src/devices/: aperture-device.c  aperture-device.h
src/gst-widgets/: aperture-gst-widget.vala  gst-widget-clutter.vala
src/pipeline/: aperture-pipeline-tee.c  aperture-pipeline-tee.h  tee.vala  zbar.vala
src/private/: aperture-camera-private.h  aperture-device-manager-private.h  aperture-private.h
tests/: coverage.sh  dummy-device-provider.c  dummy-device-provider.h  dummy-device.c  dummy-device.h  main.c  meson.build  test-barcodes.c  test-camera.c  test-device-manager.c  test-main.c  test-viewfinder.c  utils.c  utils.h
tests/data/: meson.build  tests.gresource.xml
